# MCP-Timed-Screen-Capture

./: README.md  main.py  pyproject.toml
src/mcpserver/: __main__.py  screenshot.py
